feat: added bullmq, workers and aiQueue for improved performance and security
