# backend/server.js
@@ -20,6 +20,7 @@ import recipeRoutes from './routes/recipes.js';
 import nutriRoutes from './routes/nutri.js';
 import planRoutes from './routes/plans.js';
 import shopRoutes from './routes/shop.js';
+import jobRoutes from './routes/jobs.js';
 import { connectDB, sequelize } from './config/database.js';
 import { connectRedis } from './config/redis.js';
 import { ActivityLogger } from './services/ActivityLogger.js';
@@ -67,6 +68,7 @@ app.use('/api/recipes', recipeRoutes);
 app.use('/api/nutri', nutriRoutes);
 app.use('/api/plans', planRoutes);
 app.use('/api/shop', shopRoutes);
+app.use('/api/jobs', jobRoutes);
 
 // Swagger API Documentation
 const swaggerDocument = yamljs.load(path.join(__dirname, 'swagger.yaml'));
